--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py27,py35
-minversion = 1.6
+minversion = 2.4
 
 [testenv]
 deps =
@@ -8,3 +8,4 @@ deps =
     pytest-cov
 commands = pytest -s {posargs}
 usedevelop = True
+extras = test
